css/main.css
/* ==========================================================================
  custom styles
*/
body {
    padding-top: 70px;
    padding-bottom: 40px;
    background-color: gray;

}
.block{
    padding: 20px 0px;   
}

.parallax-window {
    min-height: 600px;
    min-width: 100%;
    background: transparent;
}
/*.side{
	float: left;

}*/
.center-text{
	position: absolute;
    text-align: center;
    width: 100%;
    top: 30%;
}


.center-text div{
	position: relative;
    text-align: center;
    color: black;
    background-color: gray;
	opacity: .7;
    font-size: 4em;
}
.bx-wrapper .bx-viewport {

	border: 0px;
}
div.container-fluid{
	overflow: hidden;
}
.split{
	/*column split for text only page*/

	-webkit-column-count: 2; /* Chrome, Safari, Opera */
    -moz-column-count: 2; /* Firefox */
    column-count: 2;

    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
    -moz-column-gap: 40px; /* Firefox */
    column-gap: 40px;

    -webkit-column-rule: 4px; /* Chrome, Safari, Opera */
    -moz-column-rule: 4px;  /* Firefox */
    column-rule: 4px 
}
/* ----------- iPhone 4 and 4S ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 480px)
  and (-webkit-min-device-pixel-ratio: 2) {
	body{
		font-size: 2em;
	}
	h2{
		font-size: 24px;
	}
}

/* Portrait */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 480px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {
  	body{
		font-size: 2em;
	}	
	h2{
		font-size: 24px;
	}
}

/* Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 480px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
	body{
		font-size: 2em;
	}	
	h2{
		font-size: 24px;
	}
}

/* ----------- iPhone 5 and 5S ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
	body{
		font-size: 2em;
	}

}

/* Portrait */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {
  	body{
		font-size: 2em;
	}	
}

/* Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
	body{
		font-size: 2em;
	}	
}

/* ----------- iPhone 6 ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
	body{
		font-size: 2em;
	}	
}

/* Portrait */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) { 
	body{
		font-size: 2em;
	}	
}

/* Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) { 
	body{
		font-size: 2em;
	}	
}

/* ----------- iPhone 6+ ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
	body{
		font-size: 2em;
	}	
}

/* Portrait */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: portrait) { 
	body{
		font-size: 2em;
	}
	h1{
		font-size: 24px;
	}	
}

/* Landscape */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: landscape) { 
	body{
		font-size: 2em;
	}
	h1{
		font-size: 24px;
	}
}

